# telepromt-ia

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SETUP.md  vercel.json
.claude/: settings.json
.claude/agents/: 00-product-lead.md  01-functional-analyst.md  02-project-manager.md  10-architect.md  11-backend.md  12-frontend.md  13-devops.md  20-auth-specialist.md  21-database-specialist.md  22-security-specialist.md  23-testing-specialist.md  24-ux-reviewer.md  25-ui-designer.md  26-copywriter.md  27-performance-specialist.md  28-growth-analyst.md  29-documentation-writer.md  30-api-integrations-specialist.md  30-release-manager.md  31-deploy-validator.md  40-explorer.md  41-planner.md  42-reviewer.md  43-judge.md
.claude/commands/: debug.md  nueva-feature.md  post-deploy.md  pre-deploy.md  regression-test.md  sprint-review.md
.github/workflows/: build-desktop.yml  ci.yml
apps/desktop/: index.html  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: middleware.ts  next.config.mjs  package-lock.json  package.json  proxy.ts  tailwind.config.ts
backend/: Dockerfile  main.py  railway.toml  requirements-dev.txt  requirements.txt
backend/middleware/: auth.py
backend/routers/: health.py  knowledge.py  payments.py  sessions.py  stt.py
backend/services/: ai_service.py  auth_utils.py  credit_service.py  deepgram_service.py  text_utils.py
docs/: ARCHITECTURE.md  PRODUCT.md
scripts/: pre-deploy-check.sh  smoke-test.sh
(+68 files in other folders)
