[package]
name = "pmodule"
version = "0.1.0"
description = "Telepromt IA Desktop"
authors = ["Telepromt IA"]
edition = "2021"

[[bin]]
name = "pmodule"
path = "src/main.rs"

[lib]
name = "pmodule_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-http = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
screenshots = "0.8"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
